Doc/force-app/main/default/objects/Contract/Contract.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>