Doc/force-app/main/default/objects/Contract/fields/Account_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone_Number__c</fullName>
    <formula>Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Phone Number</label>
    <type>Text</type>
</CustomField>