Doc/force-app/main/default/objects/Contract/fields/Appliance_1_ID__c.field-meta.xml
<CustomField>
    <fullName>Appliance_1_ID__c</fullName>
    <description>This is so the SalesForce record can match the AMS data.</description>
    <label>Appliance 1 ID#:</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>