Doc/force-app/main/default/objects/Contract/fields/Appliance_2_ID__c.field-meta.xml
<CustomField>
    <fullName>Appliance_2_ID__c</fullName>
    <label>Appliance 2 ID#:</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>