Doc/force-app/main/default/objects/Contract/fields/Appliance_Model_1__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Model_1__c</fullName>
    <label>Appliance Model - Production</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3/110</fullName>
                <default>true</default>
                <label>3/110</label>
            </value>
            <value>
                <fullName>3/230</fullName>
            </value>
            <value>
                <fullName>3/440</fullName>
            </value>
            <value>
                <fullName>2 read /2 write</fullName>
            </value>
            <value>
                <fullName>3/100 Limited</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>