Doc/force-app/main/default/objects/Contract/fields/Applicable_Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Subsidiary__c</fullName>
    <label>Line of Business</label>
    <length>50</length>
    <type>Text</type>
</CustomField>