Doc/force-app/main/default/objects/Contract/fields/Approval_counter__c.field-meta.xml
<CustomField>
    <fullName>Approval_counter__c</fullName>
    <label>Approval counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>