Doc/force-app/main/default/objects/Contract/fields/Audited_for_Supersession__c.field-meta.xml
<CustomField>
    <fullName>Audited_for_Supersession__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field shall be used by the &apos;Contract Ops&apos; team to ensure that the &apos;contract status&apos; has been updated for Supersession to indicate that it has been audited.</description>
    <inlineHelpText>When &apos;Checked&apos; this field Indicates audit completed for supersession; contract statuses verified.</inlineHelpText>
    <label>Audited for Supersession</label>
    <type>Checkbox</type>
</CustomField>