Doc/force-app/main/default/objects/Contract/fields/AVA_SFCPQ__AutomaticValidateAddress__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__AutomaticValidateAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate Address Before(Deprecated)</label>
    <type>Checkbox</type>
</CustomField>