Doc/force-app/main/default/objects/Contract/fields/AVA_SFCPQ__AvaTaxMessage__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__AvaTaxMessage__c</fullName>
    <description>Displays AvaTax responses or messages.</description>
    <inlineHelpText>Displays AvaTax responses or messages.</inlineHelpText>
    <label>AvaTax Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>