Doc/force-app/main/default/objects/Contract/fields/AVA_SFCPQ__Contract_AutomateTaxCalculation__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Contract_AutomateTaxCalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers AvaTax to show the calculated tax.</description>
    <inlineHelpText>Triggers AvaTax to show the calculated tax.</inlineHelpText>
    <label>Calculate Tax</label>
    <type>Checkbox</type>
</CustomField>