Doc/force-app/main/default/objects/Contract/fields/AVA_SFCPQ__Inclusive_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Inclusive_Tax_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>If tax has been indicated to be included for any line items, this is the sum of those included tax amounts</inlineHelpText>
    <label>Inclusive Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>