Doc/force-app/main/default/objects/Contract/fields/AVA_SFCPQ__Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Shipping_Method__c</fullName>
    <inlineHelpText>Utilize this field to define the shipping mode in which the individual line item or transaction is being used. Cross Border tax calculation must be enabled in the configurations.</inlineHelpText>
    <label>Shipping Method</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>