Doc/force-app/main/default/objects/Contract/fields/Billed_Under_OSA__c.field-meta.xml
<CustomField>
    <fullName>Billed_Under_OSA__c</fullName>
    <formula>IF( ISBLANK(Billed_Under__c), ContractNumber, Billed_Under__r.ContractNumber )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billed Under OSA</label>
    <type>Text</type>
</CustomField>