Doc/force-app/main/default/objects/Contract/fields/BillingFrequency__c.field-meta.xml
<CustomField>
    <fullName>BillingFrequency__c</fullName>
    <description>Built according to BIZ-47359</description>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingFrequency</valueSetName>
    </valueSet>
</CustomField>