Doc/force-app/main/default/objects/Contract/fields/Client_Confidentiality_Agreement2__c.field-meta.xml
<CustomField>
    <fullName>Client_Confidentiality_Agreement2__c</fullName>
    <label>Client Confidentiality Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>