Doc/force-app/main/default/objects/Contract/fields/Contingency__c.field-meta.xml
<CustomField>
    <fullName>Contingency__c</fullName>
    <description>Does this contract have any contingencies, or any acceptance criteria that must be met?</description>
    <inlineHelpText>Does this contract have any contingencies, or any acceptance criteria that must be met?</inlineHelpText>
    <label>Contingency Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>- Acceptance criteria - Services</fullName>
            </value>
            <value>
                <fullName>- Acceptance criteria - Software</fullName>
            </value>
            <value>
                <fullName>- Acceptance criteria - Terms &amp; Conditions</fullName>
            </value>
            <value>
                <fullName>- POC</fullName>
            </value>
            <value>
                <fullName>- Right of Return</fullName>
            </value>
            <value>
                <fullName>- All of the above</fullName>
            </value>
            <value>
                <fullName>- Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>