Doc/force-app/main/default/objects/Contract/fields/Contingency_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Deadline__c</fullName>
    <description>The date the contingency is expired, or any important deadlines to be mindful of.</description>
    <inlineHelpText>What is the deadline of the contingency?</inlineHelpText>
    <label>Contingency Deadline</label>
    <type>Date</type>
</CustomField>