Doc/force-app/main/default/objects/Contract/fields/Contract_Duration__c.field-meta.xml
<CustomField>
    <fullName>Contract_Duration__c</fullName>
    <formula>EndDate-StartDate</formula>
    <label>Contract Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>