Doc/force-app/main/default/objects/Contract/fields/Contract_End_Date_Timezone_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date_Timezone_Adjusted__c</fullName>
    <description>Contract End Date Adjusted to the local time zone.</description>
    <formula>TEXT(MONTH(EndDate)) +&apos;-&apos;+ TEXT(DAY(EndDate)) +&apos;-&apos;+ TEXT(YEAR(EndDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract End Date Timezone Adjusted</label>
    <type>Text</type>
</CustomField>