Doc/force-app/main/default/objects/Contract/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>Field created to display hyperlink of contract number on the screen flow.
Built according to US # 46097</description>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Id  , ContractNumber)</formula>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>