Doc/force-app/main/default/objects/Contract/fields/Contract_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Contract_Recipient__c</fullName>
    <description>This is the person at the firm who is to receive and review the contract.</description>
    <label>Contract Recipient</label>
    <length>35</length>
    <type>Text</type>
</CustomField>