Doc/force-app/main/default/objects/Contract/fields/Contract_Renewal_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Job_Status__c</fullName>
    <description>Field that holds the reason for contract renewal failure, if any.</description>
    <label>Contract Renewal Job Status</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>