Doc/force-app/main/default/objects/Contract/fields/Contract_Start_Date_Timezone_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date_Timezone_Adjusted__c</fullName>
    <description>Contract Start Date Adjusted to the local time zone.</description>
    <formula>TEXT(MONTH(StartDate)) +&apos;-&apos;+  TEXT(DAY(StartDate)) +&apos;-&apos;+  TEXT(YEAR(StartDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Start Date Timezone Adjusted</label>
    <type>Text</type>
</CustomField>