Doc/force-app/main/default/objects/Contract/fields/Contract_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Contract_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Uploaded</label>
    <type>Checkbox</type>
</CustomField>