Doc/force-app/main/default/objects/Contract/fields/CPI__c.field-meta.xml
<CustomField>
    <fullName>CPI__c</fullName>
    <label>SFA Cap after Initial Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A (Master Terms Apply)</fullName>
            </value>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>CPI + 3%</fullName>
            </value>
            <value>
                <fullName>CPI + 5%</fullName>
            </value>
            <value>
                <fullName>CPI + 10%</fullName>
            </value>
            <value>
                <fullName>Greater of CPI or 3%</fullName>
            </value>
            <value>
                <fullName>Greater of CPI or 5%</fullName>
            </value>
            <value>
                <fullName>Greater of CPI or 10%</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
            <value>
                <fullName>3%</fullName>
            </value>
            <value>
                <fullName>RPI + 10%</fullName>
            </value>
            <value>
                <fullName>RPI + 5%</fullName>
            </value>
            <value>
                <fullName>Greater of RPI or 5%</fullName>
            </value>
            <value>
                <fullName>Greater of RPI or 10%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>