Doc/force-app/main/default/objects/Contract/fields/CPI_Other__c.field-meta.xml
<CustomField>
    <fullName>CPI_Other__c</fullName>
    <description>To  fill in any custom CPI set up</description>
    <label>SFA Other</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>