Doc/force-app/main/default/objects/Contract/fields/CPQ_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Contract_Status__c</fullName>
    <description>Indicates whether the contract is currently active, not yet started, or lapsed based on date logic and OSA status. Created as part of BIZ-68170.</description>
    <label>CPQ Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>