Doc/force-app/main/default/objects/Contract/fields/Current_Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Invoice_Due_Date__c</fullName>
    <description>This is used by Sales Managers and Support to track payment status of the current invoice. It is filled and maintained by Accounting.</description>
    <label>Current Invoice Due Date</label>
    <type>Date</type>
</CustomField>