Doc/force-app/main/default/objects/Contract/fields/Custom_Software_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Custom_Software_Payment_Term__c</fullName>
    <description>Built according to BIZ-47359</description>
    <label>Custom Software Payment Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>