Doc/force-app/main/default/objects/Contract/fields/Date_Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Invoice_Sent__c</fullName>
    <label>Date Invoice Sent</label>
    <type>Date</type>
</CustomField>