Doc/force-app/main/default/objects/Contract/fields/DCP_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>DCP_Contract_Number__c</fullName>
    <externalId>true</externalId>
    <label>DCP Contract Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>