Doc/force-app/main/default/objects/Contract/fields/Deal_Cloud_Id__c.field-meta.xml
<CustomField>
    <fullName>Deal_Cloud_Id__c</fullName>
    <label>Deal Cloud Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>