Doc/force-app/main/default/objects/Contract/fields/Discount_Justified__c.field-meta.xml
<CustomField>
    <fullName>Discount_Justified__c</fullName>
    <description>What is the justification for giving this discount?</description>
    <inlineHelpText>Provide description as to justification for providing the discount. Approval of your OSA could depend upon this justification, so include it where applicable.</inlineHelpText>
    <label>Discount Justified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>