Doc/force-app/main/default/objects/Contract/fields/Early_Payment_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Early_Payment_Incentive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Early Payment Incentive</label>
    <type>Checkbox</type>
</CustomField>