Doc/force-app/main/default/objects/Contract/fields/Early_Payment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Early_Payment_Notes__c</fullName>
    <label>Early Payment Notes</label>
    <type>TextArea</type>
</CustomField>