Doc/force-app/main/default/objects/Contract/fields/Enterprise_Development__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Development__c</fullName>
    <description>The number of Enterprise Development Appliances.</description>
    <label>Enterprise - Development</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>