Doc/force-app/main/default/objects/Contract/fields/Enterprise_Production__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Production__c</fullName>
    <description>The number of Enterprise Production Appliances.</description>
    <label>Enterprise - Production</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>