Doc/force-app/main/default/objects/Contract/fields/Exception_Approval__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, uses Exception Approval process</description>
    <label>Exception Approval</label>
    <type>Checkbox</type>
</CustomField>