Doc/force-app/main/default/objects/Contract/fields/Exception_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exception Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exception_Approver_2_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>