Doc/force-app/main/default/objects/Contract/fields/Exception_Approver_4__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approver_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exception Approver 4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exception_Approver_4_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>